add grid template area structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,8 @@
   <title>Tableau Mondrian</title>
 </head>
 <body>
-  
+  <div id="container">
+    
+  </div>
 </body>
 </html>
