1st line adding

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
   <title>Tableau Mondrian</title>
 </head>
 <body>
-  <div id="container">
-    
+  <h1>Tableau Mondrian</h1>
+  <div id="grid-container">
+
+    <!----- LINE 1 ------->
+    <div id="item0"></div>
+    <div id="item1"></div>
+    <div id="item2"></div>
+    <div id="item3"></div>
+    <div id="item4"></div>
+
   </div>
 </body>
 </html>
