2nd 3rd line adding

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
   <div id="grid-container">
 
     <!----- LINE 1 ------->
-    <div id="item0"></div>
-    <div id="item1"></div>
-    <div id="item2"></div>
-    <div id="item3"></div>
-    <div id="item4"></div>
+    <div class="white0"></div>
+    <div class="white1"></div>
+    <div class="white2"></div>
+    <div class="white3"></div>
+    <div class="yellow0"></div>
+    <div class="blue0"></div>
+    <div class="white4"></div>
+    <div class="blue1"></div>
 
   </div>
 </body>
