finish half of the exercice

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 <body>
   <h1>Tableau Mondrian</h1>
   <div id="grid-container">
-
-    <!----- LINE 1 ------->
     <div class="white0"></div>
     <div class="white1"></div>
     <div class="white2"></div>
@@ -20,7 +18,17 @@
     <div class="blue0"></div>
     <div class="white4"></div>
     <div class="blue1"></div>
-
+    <div class="white5"></div>
+    <div class="white6"></div>
+    <div class="white7"></div>
+    <div class="yellow1"></div>
+    <div class="red0"></div>
+    <div class="red1"></div>
+    <div class="yellow2"></div>
+    <div class="red2"></div>
+    <div class="blue2"></div>
+    <div class="white8"></div>
+    <div class="white9"></div>
   </div>
 </body>
 </html>
