--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
     <div class="blue2"></div>
     <div class="white8"></div>
     <div class="white9"></div>
+    <div class="white10"></div>
+    <div class="red3"></div>
+    <div class="yellow3"></div>
+    <div class="white11"></div>
+    <div class="white12"></div>
+    <div class="blue3"></div>
+    <div class="yellow4"></div>
+    <div class="white13"></div>
+    <div class="red4"></div>
+    <div class="white14"></div>
+    <div class="white15"></div>
   </div>
 </body>
 </html>
