--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./img/palette.ico">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Tableau Mondrian</title>
 </head>
 <body>
